Add Entity framework & Identity & JWT

--- a/SafariGo.Api/appsettings.json
+++ b/SafariGo.Api/appsettings.json
@@ -1,9 +1,18 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\ProjectModels;Database=SafariGo;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JWT": {
+    "Key": "FSeibgTZDqE0LQuO9ATzH72algFU40sKS2LNM6a9m10=",
+    "Issuer": "Server",
+    "Audience": "Clien Side",
+    "DurationInDay": 30
   },
   "AllowedHosts": "*"
 }
