--- a/SafariGo.Api/appsettings.json
+++ b/SafariGo.Api/appsettings.json
@@ -14,5 +14,13 @@
     "Audience": "Clien Side",
     "DurationInDay": 30
   },
+  "MailSettings": {
+    "Email": "See-Jordan@outlook.com",
+    "Password": "AwAd12@@34@@",
+    "DisplayName": "See Jordan",
+    "Host": "smtp-mail.outlook.com",
+    "Port": 587
+  },
+  "AppUrl": "https://localhost:7091",
   "AllowedHosts": "*"
 }
