These tasks have been completed 1- Authentication 2- Account Access 3- profile settimgs

--- a/SafariGo.Api/appsettings.json
+++ b/SafariGo.Api/appsettings.json
@@ -21,6 +21,11 @@
     "Host": "smtp-mail.outlook.com",
     "Port": 587
   },
+  "CloudinarySettings": {
+    "CloudName": "see-jordan",
+    "APIKey": "442713475586986",
+    "APISecret": "vYF1pFxKtlf6bZoFOjPV1AiN2AI"
+  },
   "AppUrl": "https://localhost:7091",
   "AllowedHosts": "*"
 }
