Add Category & Category Item

--- a/SafariGo.Api/appsettings.json
+++ b/SafariGo.Api/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\ProjectModels;Database=SafariGo;Trusted_Connection=True"
+    //"DefaultConnection": "Server=DemoMA511.mssql.somee.com;Database=DemoMA511;user id=testawad520_SQLLogin_1;pwd=n6spjvzeqx;Encrypt=False"
+    //"DefaultConnection": "Server=Musa111.mssql.somee.com;Database=Musa111;user id=MAwad520_SQLLogin_1;pwd=orhz31hobn;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
@@ -27,5 +29,6 @@
     "APISecret": "vYF1pFxKtlf6bZoFOjPV1AiN2AI"
   },
   "AppUrl": "https://localhost:7091",
+  //"AppUrl": "http://www.ma511.somee.com",
   "AllowedHosts": "*"
 }
