--- a/SafariGo.Api/SafariGo.Api.csproj
+++ b/SafariGo.Api/SafariGo.Api.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\Template\EmailTemplate.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.4">
       <PrivateAssets>all</PrivateAssets>
@@ -18,6 +22,10 @@
   <ItemGroup>
     <ProjectReference Include="..\SafariGo.Core\SafariGo.Core.csproj" />
     <ProjectReference Include="..\SafariGo.DataAccess\SafariGo.DataAccess.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Template\EmailTemplate.html" />
   </ItemGroup>
 
 </Project>
