--- a/SafariGo.Api/appsettings.json
+++ b/SafariGo.Api/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=(localdb)\\ProjectModels;Database=SafariGo;Trusted_Connection=True"
-    "DefaultConnection": "Server=DemoMA511.mssql.somee.com;Database=DemoMA511;user id=testawad520_SQLLogin_1;pwd=n6spjvzeqx;Encrypt=False"
-
+    //"DefaultConnection": "Server=DemoMA511.mssql.somee.com;Database=DemoMA511;user id=testawad520_SQLLogin_1;pwd=n6spjvzeqx;Encrypt=False"
+    //"DefaultConnection": "Server=Musa111.mssql.somee.com;Database=Musa111;user id=MAwad520_SQLLogin_1;pwd=orhz31hobn;Encrypt=False"
+    "DefaultConnection": "Server=(localdb)\\ProjectModels;Database=SafariGo;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
@@ -28,7 +28,12 @@
     "APIKey": "442713475586986",
     "APISecret": "vYF1pFxKtlf6bZoFOjPV1AiN2AI"
   },
-  //"AppUrl": "https://localhost:7091",
-  "AppUrl": "http://www.ma511.somee.com",
+  //"AppUrl": "http://www.ma511.somee.com",
+  //"AppUrl": "http://musa.somee.com",
+  "AppUrl": "https://localhost:7091",
+
   "AllowedHosts": "*"
 }
+
+
+
